# gnome-shell-extension-kimpanel

./: .clang-format  .gitignore  CMakeLists.txt  Messages.sh  README  boxpointer.js  convenience.js  extension.js  hide_kimpanel.sh  indicator.js  install.sh  lib.js  menu.js  meson.build  meson_options.txt  metadata.json  metadata.json.in  metadata.json.meson.in  panel.js  prefs.js  stylesheet.css
doc/: client.xml
po/: CMakeLists.txt  LINGUAS  Messages.sh  de.po  es.po  fr.po  gnome-shell-extensions-kimpanel.pot  he.po  ja.po  ka.po  ko.po  meson.build  nl.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
schemas/: gschemas.compiled  meson.build  org.gnome.shell.extensions.kimpanel.gschema.xml
